<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Nome" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Preco"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/real"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                tools:text="Preço" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Quantidade"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0"
                android:text="@string/qty"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/buttonRem"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="0"
                android:background="@color/invisible"
                android:contentDescription="@string/botao_remove"
                app:srcCompat="@drawable/ic_baseline_remove_circle_24"
                tools:ignore="TouchTargetSizeCheck"
                tools:srcCompat="@drawable/ic_baseline_remove_circle_24" />

            <TextView
                android:id="@+id/textQuantidade"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="20sp"
                tools:text="0" />

            <ImageButton
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="0"
                android:background="@color/invisible"
                android:backgroundTint="@color/darkgray"
                android:contentDescription="@string/botao_add"
                app:srcCompat="@drawable/ic_baseline_add_circle_24"
                tools:ignore="TouchTargetSizeCheck"
                tools:srcCompat="@drawable/ic_baseline_add_circle_24" />

        </LinearLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Terracora_claro"
            android:text="Excluir"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.cardview.widget.CardView>